Bug 293994 - message in Appearance/Message Tags is keeping the configuration window too wide
Summary: message in Appearance/Message Tags is keeping the configuration window too wide
Status: CLOSED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: 4.8
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-13 13:15 UTC by Martin Walch
Modified: 2012-02-13 14:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
a screenshot of the dialog with the message in it (48.09 KB, image/png)
2012-02-13 13:15 UTC, Martin Walch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Walch 2012-02-13 13:15:40 UTC
Created attachment 68758 [details]
a screenshot of the dialog with the message in it

Version:           4.8 (using KDE 4.8.0) 
OS:                Linux

If Nepomuk services are not running, there appears a warning in >Appearance >Message Tags. This warning refuses to be wrapped over several lines. So you can not narrow the window much. In German localization (and probably some others, too), it is even too wide to fit in a common screen resolution.

Reproducible: Always

Steps to Reproduce:
- make sure kmail is not running and Nepomuk services are deactived in systemsettings
- start kmail, preferably in German localization
- open the settings dialog
- try to make it narrower

Actual Results:  
The minimum width of the window is limited by the length of the warning message that shows up in >Appearance >Message Tags

The warning in German is

"Der semantische Suchdienst „Nepomuk“ ist nicht verfügbar. Ohne diesem ist das Einrichten von Stichwörtern nicht möglich. Sie können den Dienst in den Systemeinstellungen einschalten."

which is too long to fit on my screen with a resolution of 1280x1024.

Expected Results:  
If the message does not fit in one line, wrap it.

This happened for me while Nepomuk services were actually activated. However, they failed to start, so KMail behaved like they were not.
Comment 1 Laurent Montel 2012-02-13 14:21:56 UTC
Git commit 82abad697f8cbc78dbc68a699d556529cb2804ff by Montel Laurent.
Committed on 13/02/2012 at 15:21.
Pushed by mlaurent into branch 'master'.

Fix Bug 293994 - message in Appearance/Message Tags is keeping the

configuration window too wide

FIXED-IN: 4.8.1

M  +1    -0    kmail/configuredialog.cpp

http://commits.kde.org/kdepim/82abad697f8cbc78dbc68a699d556529cb2804ff
Comment 2 Laurent Montel 2012-02-13 14:23:16 UTC
Git commit 920bdd7a73f1b1af7ffe30c73b58233f27112f8b by Montel Laurent.
Committed on 13/02/2012 at 15:21.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 293994 - message in Appearance/Message Tags is keeping the

configuration window too wide

FIXED-IN: 4.8.1
(cherry picked from commit 82abad697f8cbc78dbc68a699d556529cb2804ff)

Conflicts:

	kmail/configuredialog.cpp

M  +1    -0    kmail/configuredialog.cpp

http://commits.kde.org/kdepim/920bdd7a73f1b1af7ffe30c73b58233f27112f8b