Fix Bug 293994 - message in Appearance/Message Tags is keeping the

configuration window too wide

FIXED-IN: 4.8.1
BUG: 293994
(cherry picked from commit 82abad697f8cbc78dbc68a699d556529cb2804ff)

Conflicts:

	kmail/configuredialog.cpp